Init TCP server

--- a/config.json
+++ b/config.json
@@ -233,6 +233,7 @@
             //config: The configuration of the plugin. This json object is the parameter to initialize the plugin.
             //It can be commented out
             "config": {
+                "port": 10027,
                 "room_types": [
                     {
                         "name": "unlimited",
