Implemented TCP methods.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,10 @@ include(CheckIncludeFileCXX)
 
 check_include_file_cxx(any HAS_ANY)
 check_include_file_cxx(string_view HAS_STRING_VIEW)
-if (HAS_ANY AND HAS_STRING_VIEW)
+check_include_file_cxx(ranges HAS_RANGES)
+if (HAS_RANGES)
+    set(CMAKE_CXX_STANDARD 20)
+elseif (HAS_ANY AND HAS_STRING_VIEW)
     set(CMAKE_CXX_STANDARD 17)
 else ()
     set(CMAKE_CXX_STANDARD 14)
@@ -30,8 +33,10 @@ if (CMAKE_CXX_STANDARD LESS 17)
     message(STATUS "use c++14")
     find_package(Boost 1.61.0 REQUIRED)
     target_include_directories(${PROJECT_NAME} PRIVATE ${Boost_INCLUDE_DIRS})
-else ()
+elseif (CMAKE_CXX_STANDARD LESS 20)
     message(STATUS "use c++17")
+else ()
+    message(STATUS "use c++20")
 endif ()
 
 aux_source_directory(utils UTILS_SRC)
