--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -1,20 +1,15 @@
-# This is a basic workflow that is manually triggered
-
-name: Manual workflow
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
+name: Check dependencies
 on:
   workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
-        required: true
+#    # Inputs the workflow accepts.
+#    inputs:
+#      name:
+#        # Friendly description to be shown in the UI instead of 'name'
+#        description: 'Person to greet'
+#        # Default value if no value is explicitly provided
+#        default: 'World'
+#        # Input has to be provided for the workflow to run
+#        required: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -25,6 +20,8 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ github.event.inputs.name }}"
+      # Runs a single command using the runners shell
+      - name: apt helper action
+        uses: ryankurte/action-apt@v0.2.0
+        with:
+          packages: "libjsoncpp-dev uuid-dev openssl libssl-dev zlib1g-dev postgresql-all"
