--- a/.github/workflows/check_dependencies.yml
+++ b/.github/workflows/check_dependencies.yml
@@ -1,6 +1,5 @@
 name: Check dependencies
-on:
-  workflow_dispatch:
+on: workflow_dispatch
 
 jobs:
   # This workflow contains a single job called "greet"
