--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,17 +1,14 @@
 name: Build release
 on: workflow_dispatch
-
 jobs:
-
   build_release:
     runs-on: ubuntu-latest
     steps:
-    - uses: ryankurte/action-apt@v0.2.0
     - name: Install Packages
+      uses: ryankurte/action-apt@v0.2.0
       with:
         packages: "libjsoncpp-dev uuid-dev openssl libssl-dev zlib1g-dev postgresql-all"
 
-    - uses: actions/checkout@v2
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
