--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,41 +1,53 @@
 name: Build release
 on: workflow_dispatch
-
+env:
+  BUILD_TYPE: Release
 jobs:
-
   build_release:
+    name: Ubuntu 18.04
     runs-on: ubuntu-latest
     steps:
-    - uses: ryankurte/action-apt@v0.2.0
-    - name: Install Packages
-      with:
-        packages: "libjsoncpp-dev uuid-dev openssl libssl-dev zlib1g-dev postgresql-all"
+      - name: Install Dependencies
+        run: |
+          sudo apt update
+          sudo apt install libjsoncpp-dev uuid-dev openssl libssl-dev zlib1g-dev postgresql-all libsqlite3-dev
+          sudo apt install libbrotli-dev
 
-    - uses: actions/checkout@v2
-    - name: Create Build Environment
-      # Some projects don't allow in-source building, so create a separate build directory
-      # We'll use this as our working directory for all subsequent commands
-      run: cmake -E make_directory ${{runner.workspace}}/build
+      - name: Checkout Backend source code
+        uses: actions/checkout@v2
 
-    - name: Configure CMake
-      # Use a bash shell so we can use the same syntax for environment variable
-      # access regardless of the host operating system
-      shell: bash
-      working-directory: ${{runner.workspace}}/build
-      # Note the current convention is to use the -S and -B options here to specify source
-      # and build directories, but this is only available with CMake 3.13 and higher.
-      # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+      - name: Checkout Drogon source code
+        uses: actions/checkout@v2
+        with:
+          repository: an-tao/drogon
+          submodules: true
+          fetch-depth: 0
+          path: drogon-src
 
-    - name: Build
-      working-directory: ${{runner.workspace}}/build
-      shell: bash
-      # Execute the build.  You can specify a specific target with "--target <NAME>"
-      run: cmake --build . --config $BUILD_TYPE
+      - name: Cmake Drogon
+        shell: bash
+        working-directory: ${{github.workspace}}/drogon-src
+        run: |
+          mkdir build
+          cd build
+          cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
-    - name: Test
-      working-directory: ${{runner.workspace}}/build
-      shell: bash
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C $BUILD_TYPE
+      - name: Build Drogon
+        working-directory: ${{github.workspace}}/drogon-src
+        shell: bash
+        run: |
+          cd build
+          sudo make && sudo make install
+
+      - name: Cmake TechminoBackend
+        shell: bash
+        working-directory: ${{github.workspace}}
+        run: |
+          mkdir build
+          cd build
+          cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+
+      - name: Build TechminoBackend
+        working-directory: ${{github.workspace}}/build
+        shell: bash
+        run: cmake --build . --config $BUILD_TYPE
