--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -9,6 +9,10 @@ jobs:
       with:
         packages: "libjsoncpp-dev uuid-dev openssl libssl-dev zlib1g-dev postgresql-all"
 
+    # Execute checkout to fetch the source code of the project.
+    - name: Checkout source code
+      uses: actions/checkout@v2
+    
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
