--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,5 +1,8 @@
 name: Build release
 on: workflow_dispatch
+env:
+  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
+  BUILD_TYPE: Release
 jobs:
   build_release:
     runs-on: ubuntu-latest
@@ -9,9 +12,7 @@ jobs:
       with:
         packages: "libjsoncpp-dev uuid-dev openssl libssl-dev zlib1g-dev postgresql-all"
 
-    # Execute checkout to fetch the source code of the project.
-    - name: Checkout source code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
     
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
