--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -4,7 +4,7 @@ env:
   BUILD_TYPE: Release
 jobs:
   build_release:
-    name: Ubuntu 18.04
+    name: Ubuntu Latest
     runs-on: ubuntu-latest
     steps:
       - name: Install Dependencies
