--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,5 +1,17 @@
 name: Build release
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      version_code:
+        description: 'Version Code'
+        required: true
+      version_name:
+        description: 'Version Code'
+        required: true
+      body:
+        description: 'Description'
+        default: 'New release'
+        required: true
 env:
   BUILD_TYPE: Release
 jobs:
@@ -68,3 +80,31 @@ jobs:
         working-directory: ${{github.workspace}}/build
         shell: bash
         run: cmake --build . --config $BUILD_TYPE
+
+      - name: Pack TechminoBackend
+        working-directory: ${{github.workspace}}
+        shell: bash
+        run: zip -r release.zip ./build
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        with:
+          tag_name: ${{github.event.inputs.version_code}}
+          release_name: ${{github.event.inputs.version_name}}
+          body: ${{github.event.inputs.body}}
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        with:
+          upload_url: ${{steps.create_release.outputs.upload_url}}
+          asset_path: ./release.zip
+          asset_name: release.zip
+          asset_content_type: application/zip
