--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -25,7 +25,7 @@ jobs:
           sudo apt install libjsoncpp-dev uuid-dev openssl libssl-dev zlib1g-dev postgresql-all libsqlite3-dev
           sudo apt install libbrotli-dev
 
-      - name: Checkout Backend source code
+      - name: Checkout TechminoBackend source code
         uses: actions/checkout@v2
 
       - name: Cache Drogon
