--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -26,10 +26,9 @@ jobs:
         shell: cmd
         working-directory: ${{github.workspace}}
         run: |
-          ls
           mkdir build
           cd build
-          cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+          cmake .. -DCMAKE_TOOLCHAIN_FILE=C:/Users/runneradmin/AppData/Local/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
       - name: Build TechminoBackend
         working-directory: ${{github.workspace}}/build
