--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -15,7 +15,7 @@ jobs:
         uses: lukka/run-vcpkg@v6
         with:
           # Location of the vcpkg as submodule of the repository.
-          vcpkgDirectory: 'C:/Users/runneradmin/AppData/Local/vcpkg'
+          vcpkgDirectory: '${{github.workspace}}/vcpkg'
           vcpkgTriplet: 'x64-windows'
           vcpkgArguments: 'drogon'
 
