--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -15,16 +15,12 @@ jobs:
         id: setup_vcpkg
         uses: lukka/run-vcpkg@v6
         with:
-          setupOnly: true
           vcpkgGitCommitId: '981e65ce0ac1f6c86e5a5ded7824db8780173c76'
           vcpkgDirectory: '${{github.workspace}}/vcpkg'
+          vcpkgTriplet: 'x64-windows'
+          vcpkgArguments: 'drogon'
 
-      - run: |
-          $VCPKG_ROOT/vcpkg install drogon:x64-windows --clean-after-build
-          shell: bash
-        name: Run vcpkg in a inline script in this workflow.
-
-      - name: Prints output of run-vcpkg's action
+      - name: Prints output of "Setup vcpkg"
         run: echo "root='${{ steps.setup_vcpkg.outputs.RUNVCPKG_VCPKG_ROOT_OUT }}', triplet='${{ steps.setup_vcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}'"
 
       - name: Cmake TechminoBackend
