--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -20,15 +20,12 @@ jobs:
           vcpkgTriplet: 'x64-windows'
           vcpkgArguments: 'drogon'
 
-      - name: Prints output of "Setup vcpkg"
-        run: echo "root='${{ steps.setup_vcpkg.outputs.RUNVCPKG_VCPKG_ROOT_OUT }}', triplet='${{ steps.setup_vcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}'"
-
-      - name: Cmake TechminoBackend
-        uses: lukka/run-cmake@v3
-        with:
-          cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
-          useVcpkgToolchainFile: true
-          cmakeAppendedArgs: '-DCMAKE_BUILD_TYPE=$BUILD_TYPE'
-          buildWithCMake: true
-          buildDirectory: '${{github.workspace}}/build'
-          buildWithCMakeArgs: '--config $BUILD_TYPE'
+#      - name: Cmake TechminoBackend
+#        uses: lukka/run-cmake@v3
+#        with:
+#          cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
+#          useVcpkgToolchainFile: true
+#          cmakeAppendedArgs: '-DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}'
+#          buildWithCMake: true
+#          buildDirectory: '${{github.workspace}}/build'
+#          buildWithCMakeArgs: '--config ${{env.BUILD_TYPE}}'
