--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Pack TechminoBackend
         working-directory: ${{github.workspace}}
         shell: bash
-        run: zip -r windows-x64.zip ./build/Release
+        run: 7z a windows-x64.zip -r ./build/Release
 
       - name: Create Release
         id: create_release
