--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -78,9 +78,13 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Export Upload URL
-        id: export_upload_url
-        run: echo "::set-output name=upload_url::${{steps.create_release.outputs.upload_url}}"
+      - name: Set Upload URL
+        uses: noobly314/share-data@v1
+        with:
+          share-id: upload_url
+          mode: set
+          key: upload_url
+          value: ${{steps.create_release.outputs.upload_url}}
 
       - name: Upload Release Asset
         id: upload-release-asset
@@ -165,13 +169,21 @@ jobs:
         shell: bash
         run: zip -r ubuntu.zip ./build
 
+      - name: Get Upload URL
+        id: get_upload_url
+        uses: noobly314/share-data@v1
+        with:
+          share-id: upload_url
+          mode: get
+          key: upload_url
+
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
-          upload_url: ${{jobs.windows_latest.steps.export_upload_url.outputs.upload_url}}
+          upload_url: ${{steps.get_upload_url.outputs.data}}
           asset_path: ./ubuntu.zip
           asset_name: ubuntu.zip
           asset_content_type: application/zip
