--- a/.github/workflows/ubuntu_test.yml
+++ b/.github/workflows/ubuntu_test.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Cache Dependences
-        uses: actions/cache@v1.0.3
+        uses: actions/cache@v2
         id: cache_dependences
         with:
           path: "~/dependencies"
@@ -52,7 +52,7 @@ jobs:
               sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
             done
 
-            for dep in libpq5 libgssapi-krb5-2 libldap-2.4-2 libcom-err2 libk5crypto3 libkrb5-3 libkrb5support0 libkeyutils1 libgnutls30 libsasl2-2 libgmp10 libidn2-0 libnettle8 libp11-kit0 libtasn1-6 libunistring2 libsasl2-modules-db libffi7 libdb5.3; do
+            for dep in libpq5 libgssapi-krb5-2 libldap-2.4-2 libcom-err2 libk5crypto3 libkrb5-3 libkrb5support0 libkeyutils1 libgnutls30 libsasl2-2 libgmp10 libidn2-0 libp11-kit0 libtasn1-6 libunistring2 libsasl2-modules-db libffi7 libdb5.3; do
               sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
             done
 
