--- a/.github/workflows/ubuntu_test.yml
+++ b/.github/workflows/ubuntu_test.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: '~/dependencies'
-          key: ${{ hashFiles('main.cc') }}
+          key: ${{ runner.os }}-${{ hashFiles('main.cc') }}
 
       - name: Install Dependences
         env:
