--- a/.github/workflows/ubuntu_test.yml
+++ b/.github/workflows/ubuntu_test.yml
@@ -75,7 +75,7 @@ jobs:
               sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
             done
 
-            for dep in postgresql-server-dev-13 postgresql-client-13 libedit2 libbsd0 libtinfo6; do
+            for dep in postgresql-server-dev-13 postgresql-client-13 libedit2 libbsd0; do
               sudo dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/dependencies
             done
 
