- Apart models and strategies from main program.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,26 +29,27 @@ add_executable(${PROJECT_NAME} main.cc)
 # target_link_libraries(${PROJECT_NAME} PRIVATE drogon)
 ##########
 
-find_package(Drogon CONFIG REQUIRED)
-target_link_libraries(${PROJECT_NAME} PRIVATE Drogon::Drogon)
+#find_package(Drogon CONFIG REQUIRED)
+#target_link_libraries(${PROJECT_NAME} PRIVATE Drogon::Drogon)
 
-if (CMAKE_CXX_STANDARD LESS 17)
-    #With C++14, use boost to support any and string_view
-    message(STATUS "use c++14")
-    find_package(Boost 1.61.0 REQUIRED)
-    target_include_directories(${PROJECT_NAME} PRIVATE ${Boost_INCLUDE_DIRS})
-elseif (CMAKE_CXX_STANDARD LESS 20)
-    message(STATUS "use c++17")
-else ()
-    message(STATUS "use c++20")
-endif ()
+#if (CMAKE_CXX_STANDARD LESS 17)
+#    #With C++14, use boost to support any and string_view
+#    message(STATUS "use c++14")
+#    find_package(Boost 1.61.0 REQUIRED)
+#    target_include_directories(${PROJECT_NAME} PRIVATE ${Boost_INCLUDE_DIRS})
+#elseif (CMAKE_CXX_STANDARD LESS 20)
+#    message(STATUS "use c++17")
+#else ()
+#    message(STATUS "use c++20")
+#endif ()
 
-aux_source_directory(utils UTILS_SRC)
+add_subdirectory(./lib_strategies)
+
 aux_source_directory(controllers CTL_SRC)
+aux_source_directory(filters FLT_SRC)
+aux_source_directory(plugins PLG_SRC)
 aux_source_directory(services SVC_SRC)
-aux_source_directory(filters FILTER_SRC)
-aux_source_directory(plugins PLUGIN_SRC)
-aux_source_directory(models MODEL_SRC)
+aux_source_directory(utils UTL_SRC)
 
 file(GLOB_RECURSE SCP_LIST ${CMAKE_CURRENT_SOURCE_DIR}/views/*.csp)
 foreach (cspFile ${SCP_LIST})
@@ -65,9 +66,28 @@ endforeach ()
 
 find_package(OpenSSL REQUIRED)
 find_package(cryptopp CONFIG REQUIRED)
-target_link_libraries(${PROJECT_NAME} PRIVATE OpenSSL::SSL OpenSSL::Crypto cryptopp-static)
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/utils ${CMAKE_CURRENT_SOURCE_DIR}/models)
-target_sources(${PROJECT_NAME} PRIVATE ${SRC_DIR} ${UTILS_SRC} ${CTL_SRC} ${SVC_SRC} ${FILTER_SRC} ${VIEWSRC} ${PLUGIN_SRC} ${MODEL_SRC})
+
+
+
+target_link_libraries(${PROJECT_NAME} PRIVATE
+        OpenSSL::SSL
+        OpenSSL::Crypto
+        cryptopp-static
+        MODEL_LIB)
+
+target_include_directories(${PROJECT_NAME} PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}
+        ${CMAKE_CURRENT_SOURCE_DIR}/utils
+        )
+
+target_sources(${PROJECT_NAME} PRIVATE
+        ${CTL_SRC}
+        ${FLT_SRC}
+        ${PLG_SRC}
+        ${SRC_DIR}
+        ${SVC_SRC}
+        ${UTL_SRC}
+        ${VIEWSRC})
 ################################
 # uncomment the following line for dynamically loading views 
 #set_property(TARGET ${PROJECT_NAME} PROPERTY ENABLE_EXPORTS ON)
