--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "drogon"]
 	path = drogon
 	url = https://github.com/an-tao/drogon
+[submodule "lib_strategies"]
+	path = lib_strategies
+	url = https://github.com/26F-Studio/lib_strategies
